--- a/index.html
+++ b/index.html
@@ -105,15 +105,18 @@
           /></a>
         </li>
         <li>
-          <a href="#" target="_blank"></a
+          <a
+            href="https://www.instagram.com/_sergio.vinass/?hl=es"
+            target="_blank"
+          ></a
           ><img src="img/inta.png" alt="Instagram" />
         </li>
         <li>
-          <a href="#" target="_blank"></a
+          <a href="https://twitter.com/SergioVias1" target="_blank"></a
           ><img src="img/twitter (2).png" alt="Twitter" />
         </li>
         <li>
-          <a href="#" target="_blank"></a
+          <a href="https://www.reddit.com/user/Vin4ss" target="_blank"></a
           ><img src="img/reddit (2).png" alt="Reddit" />
         </li>
       </ul>
