--- a/index.html
+++ b/index.html
@@ -108,16 +108,18 @@
           <a
             href="https://www.instagram.com/_sergio.vinass/?hl=es"
             target="_blank"
-          ></a
-          ><img src="img/inta.png" alt="Instagram" />
+            ><img src="img/inta.png" alt="Instagram"
+          /></a>
         </li>
         <li>
-          <a href="https://twitter.com/SergioVias1" target="_blank"></a
-          ><img src="img/twitter (2).png" alt="Twitter" />
+          <a href="https://twitter.com/SergioVias1" target="_blank"
+            ><img src="img/twitter (2).png" alt="Twitter"
+          /></a>
         </li>
         <li>
-          <a href="https://www.reddit.com/user/Vin4ss" target="_blank"></a
-          ><img src="img/reddit (2).png" alt="Reddit" />
+          <a href="https://www.reddit.com/user/Vin4ss" target="_blank"
+            ><img src="img/reddit (2).png" alt="Reddit"
+          /></a>
         </li>
       </ul>
     </footer>
