--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav>
         <ul>
           <li id="selected"><a id="tagging" href="index.html">Home</a></li>
-          <li><a href="proyects.html">Proyects</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
