--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li id="selected">
-            <a id="tagging" href="proyects.html">Proyects</a>
+            <a id="tagging" href="projects.html">Projects</a>
           </li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
